Deploy/docker file (#21)
* Fix docker file

* Config dockerfile